Upload photo on mobile settings layout fix

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -79,6 +79,17 @@
 	margin-top: 38px;
 }
 
+#m-settings .success-msg {
+	float:none;
+	width: 100%;
+	text-align: center;
+}
+
+#m-settings .dz-preview {
+	margin: 10px auto;
+	display:block;
+	width: 203px;
+}
+
 #m-settings .dz-message {
-	
 }
